--- a/index.css
+++ b/index.css
@@ -66,6 +66,7 @@ ul {
 ul li {
     font-size: 20px;
     background-color: #fff6cc;
+    opacity: 95%;
     padding: 15px;
     border-radius: 8px;
     flex-grow: 1;
