--- a/index.css
+++ b/index.css
@@ -28,8 +28,7 @@ img {
 
 input {
     color: #5e503f;
-    background-color: #dfcaba;
-    opacity: 70%;
+    background-color: #ecded3d9;
     border: 0;
     padding: 15px;
     border-radius: 8px;
